vbnc/vbnc/tests/Errors/30002.vb
Imports Hashtable = System.Collections.Hashtabl

Class C
    Dim ht As Hashtable
End Class